profilelist1exp/unpackaged/objects/Sales_Motion_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Account_Active_Contact__c</fullName>
        <formula>Contact__r.Account_Active_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Active Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Country__c</fullName>
        <formula>Contact__r.Account.Account_Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Inactive_Contact__c</fullName>
        <formula>Contact__r.Account_Inactive_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Inactive Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affinity_Account_ID__c</fullName>
        <formula>Contact__r.Account.Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affinity Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allow_Lead_Management__c</fullName>
        <formula>Contact__r.Partner_User__r.Enable_Partner_Lead_Management__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allow Lead Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assign_MyRewards_Role__c</fullName>
        <formula>Text(Contact__r.Assign_MyRewards_Role__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assign MyRewards Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Builder__c</fullName>
        <formula>Contact__r.Campaign_Builder__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Builder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <formula>Contact__r.Contact_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Contact__r.FirstName  &amp;  Contact__r.LastName</formula>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sales Motion Contacts</relationshipLabel>
        <relationshipName>Sales_Motion_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Count_of_NPS_Data_Records__c</fullName>
        <formula>Contact__r.Count_of_NPS_Data_Records__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count of NPS Data Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decision_Making_Role__c</fullName>
        <formula>Text(Contact__r.Decision_Making_Role__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decision Making Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMEA_Preferred_Contact_Language__c</fullName>
        <formula>Text(Contact__r.EMEA_Preferred_Contact_Language__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preferred Contact Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Opt_In__c</fullName>
        <formula>Text(Contact__r.Email_Opt_In__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Opt-In</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_Deal_Registration__c</fullName>
        <formula>Contact__r.Partner_User__r.Enable_Partner_Deal_Registration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enable Deal Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_MDF_Access__c</fullName>
        <formula>Contact__r.Is_MDF_User__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enable MDF Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_User_for_MyRewards__c</fullName>
        <formula>Contact__r.Enable_User_for_MyRewards__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enable User for MyRewards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_as_Lead_Super_User__c</fullName>
        <formula>Contact__r.Partner_User__r.Enable_As_Partner_Lead_Super_User__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enable as Lead Super User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_as_Partner_Group_Administrato__c</fullName>
        <formula>Contact__r.Enable_as_Partner_Group_Administrator__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enable as Partner Group Administrator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_as_Partner_Track_Administrato__c</fullName>
        <formula>Contact__r.Partner_User_Partner_Admin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enable as Partner Track Administrator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <formula>Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Rebate_User__c</fullName>
        <formula>Contact__r.Is_Rebate_User__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enable Access to Rebates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Function_Role__c</fullName>
        <formula>Text(Contact__r.Job_Function_Role__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Function Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <formula>Text(Contact__r.Job_Function__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Function</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <formula>Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Of_User__c</fullName>
        <formula>Contact__r.Location_Of_User__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Of User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <formula>Contact__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS_Category__c</fullName>
        <formula>Contact__r.NPS_Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS_Qualified_Status__c</fullName>
        <formula>Contact__r.NPS_Qualified_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS Qualified Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS_Survey_Opt_in__c</fullName>
        <formula>Text(Contact__r.Survey__c)</formula>
        <label>NPS Survey Opt-in</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Job_Function_Category__c</fullName>
        <formula>Contact__r.Other_Job_Function_Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Job Function / Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_My_Account_GUID__c</fullName>
        <formula>Contact__r.Partner_My_Account_GUID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner My Account GUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_User_Active__c</fullName>
        <formula>Contact__r.Partner_User_Active__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner User Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Opt_In__c</fullName>
        <formula>TEXT(Contact__r.Phone_Opt_In__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone Opt-In</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premier_Partner__c</fullName>
        <formula>Contact__r.Premier_Partner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allow Premier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provisioned_in_Salesforce_on__c</fullName>
        <formula>Contact__r.Provisioned_in_Salesforce_on__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provisioned in Salesforce on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sales_Motion__c</fullName>
        <label>Sales Motion</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Motion Contacts</relationshipLabel>
        <relationshipName>Sales_Motion_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>Text(Contact__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_To_Partner_Portal_CMI__c</fullName>
        <formula>Contact__r.Sync_To_Partner_Portal_CMI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sync To Partner Portal / CMI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transactional_Store__c</fullName>
        <formula>Contact__r.Transactional_Store__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transactional Store</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Warranty_Parts_Info__c</fullName>
        <formula>Contact__r.Warranty_Parts_Info__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Warranty Parts Info</label>
        <type>Checkbox</type>
    </fields>
    <label>Sales Motion Contact</label>
    <nameField>
        <displayFormat>SMContact-{0000000}</displayFormat>
        <label>Sales Motion Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Motion Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>